--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="adminlogin.html">SignUp</a>
+                  <a class="nav-link" href="adminlogin.php">Admin</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="login.php">SignIn</a>
